# EWS-FEM-pipeline

./: .gitignore  LICENSE  README.md  adjustable_default_settings.toml  all_default_settings.toml  optimization_test_settings.toml  pyproject.toml  requirements.txt  test_settings.toml  test_settings_static_only.toml
.github/workflows/: ci.yml
analysis_output/comsol_pipeline/: README.md
analysis_output/comsol_pipeline/report_fixed_material_suite/: sources.csv
analysis_output/comsol_pipeline/stage1_baseline/: sources.csv
analysis_output/comsol_pipeline/stage2_chestwall/: sources.csv
analysis_output/comsol_pipeline/stage3_glandular_fraction/: sources.csv
analysis_output/comsol_pipeline/stage4_asymmetry/: sources.csv
analysis_output/comsol_pipeline/stage5_cooper/: sources.csv
analysis_output/comsol_pipeline/stage5_dynamic_amplitude_scout/: sources.csv
analysis_output/comsol_pipeline/tier1_comparison/: sources.csv
analysis_output/comsol_pipeline/tier1_comparison_without_stage1/: sources.csv
docs/: detailed_settings.md  open_issues.md  optimization_instruction.md  remarks.md
docs/internship_deliverables/: Github repository link - Daan Kuijpers.txt
docs/literature/: aa - README.md
docs/previous_work/femke/: Github repository link - Sioux and Femke.txt  femke_sioux_pipeline_samenvatting_en_vergelijking_2026-06-10.md
docs/project_context/: EWS Projectgroep notulen 2026-5-11.docx  Existing Model Analysis and Current Limitations.docx  Literature Summary and Reference List.docx  Mammography Risks and Motivation for Alternative Imaging.docx  Parameter Overview.docx  Plan of approach - Daan Kuijpers.docx  Werkpakketten V0.1.docx
docs/report_working_notes/: README.md  current_limitations.md  parameter_overview.md
docs/report_working_notes/literature_overviews/: breast_volume_literature_context.md  glandular_fraction_reference_context.md  material_parameter_literature_overview.md  stress_displacement_literature_benchmark.md
docs/report_working_notes/model_justification/: comsol_vs_febio_model_positioning.md  cooper_ligament_support_scouts.md  dynamic_motion_interpretation.md  material_motion_scout_strategy.md  material_parameter_selection.md  tumor_overlay_plan.md
docs/report_working_notes/pipeline_notes/: comsol_pipeline_guide.md  extended_displacement_stress_exports.md  manual_comsol_csv_workflow.md
pictures/: README.md
runs/comsol_runs/: README.md
runs/comsol_runs/geometry_stage1/: baseline_simple_gland_dynamic_solid_only.toml  full_baseline_reference_simple_gland_static_baseline.toml  full_baseline_reference_simple_gland_static_baseline_source_case_for_febio.toml  stage1_buildcheck_stage4_profile_asym_volumetric_skin_preview.toml  stage1_fixed_support_acceleration_pulse.toml  stage1_fixed_support_acceleration_pulse_mild_025g.toml  stage1_fixed_support_acceleration_pulse_moderate_050g.toml  stage1_gravity_only_reference.toml  stage1_quasistatic_gravity_sag_reference.toml  stage1_smooth_support_motion.toml  stage1_volumetric_skin_layer_build_only_preview.toml
runs/comsol_runs/geometry_stage2_chestwall/: stage2_chestwall_combined_xoffset_si_preview.toml  stage2_chestwall_sagittal_only_visual_preview.toml  stage2_chestwall_si_curve_preview.toml  stage2_chestwall_xoffset_055_autoalign_vp_fixed_order2.toml  stage2_chestwall_xoffset_055_vp_fixed_order2.toml  stage2_vp_refined_mild_g1025_fixed_order2.toml  stage2_vp_refined_mild_g1050_fixed_order1.toml  stage2_vp_refined_mild_g1050_fixed_order2.toml  stage2_vp_refined_mild_g1073_fixed_order2.toml  stage2_vp_refined_slab_reference_fixed_order1.toml  stage2_vp_refined_slab_reference_fixed_order2.toml
runs/comsol_runs/geometry_stage3/: stage3_glandular_realistic_spread_compact_xoffset055_preview.toml  stage3_glandular_realistic_spread_reference_xoffset055_preview.toml  stage3_glandular_realistic_spread_wide_xoffset055_preview.toml
runs/comsol_runs/geometry_stage4/: stage4_realistic_nipple_lateral_xoffset055_preview.toml  stage4_realistic_nipple_superior_xoffset055_preview.toml  stage4_realistic_profile_asym_xoffset055_preview.toml  stage4_realistic_reference_xoffset055_preview.toml
runs/comsol_runs/geometry_stage5/: stage5_reference_no_cooper_xoffset055_025g_preview.toml  stage5_reference_no_cooper_xoffset055_050g_preview.toml  stage5_reference_no_cooper_xoffset055_075g_preview.toml  stage5_reference_no_cooper_xoffset055_100g_solve_only_preview.toml  stage5_reference_no_cooper_xoffset055_125g_skin_on_solve_only_preview.toml  stage5_reference_no_cooper_xoffset055_125g_solve_only_preview.toml  stage5_reference_no_cooper_xoffset055_125g_volumetric_skin_mid_skin088kpa_soft_interior_solve_only_preview.toml  stage5_reference_no_cooper_xoffset055_125g_volumetric_skin_mid_skin088kpa_solve_only_preview.toml  stage5_reference_no_cooper_xoffset055_125g_volumetric_skin_soft_febio_materials_solve_only_preview.toml  stage5_reference_no_cooper_xoffset055_125g_volumetric_skin_soft_interior_solve_only_preview.toml  stage5_reference_no_cooper_xoffset055_125g_volumetric_skin_solve_only_preview.toml  stage5_scout_simple_gland_cooper_dense_network_volskin_femke_skin_soft_interior_125g_solve.toml  stage5_simple_ligament_base.toml  (+20 more)
runs/comsol_testcases/: README.md  all_default_settings.toml  all_settings.toml
scripts/: feb_to_pointcloud.py  front_beam.py  generate_mesh_test.py  geometry_optimization.py  load_data.py  run_animation_in_blender.py
sensitivity_analysis/: sensitivity_analysis_cooper_k.py
src/ews_fem_pipeline/: __init__.py  __main__.py  febio_settings.py  logging_config.toml
src/ews_fem_pipeline_comsol/: README.md  __main__.py  config.py  java_utils.py  material_mapping.py  metrics_compare.py  paths.py  pipeline.py  prepare_source_case.py  reporting.py  script_builder.py  settings.py
tools/: README.md  compare_manual_surface_exports.py  make_chestwall_curvature_schematic.py  make_comsol_evaluation_plots.py  make_model_option_tree_preview.py  make_report_contact_sheets.py  make_single_comsol_case_plot.py  make_stage6_tumor_fast_evaluation.py  update_manual_postprocess_summary.py
(+210 files in other folders)
