[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "ews-fem-pipeline"
dynamic = ["version"]
description = 'Pipeline for running FEM simulations for Early Warning Scan'
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = []
authors = [
  { name = "Pim Keizer", email = "pim.keizer@sioux.eu" },
  { name = "Casper Schippers", email = "casper.schippers@sioux.eu" },
    { name = "Femke Storm", email = "femke.storm@sioux.eu" },

]
requires-python = ">=3.13"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click>=8.3.1",
  "tqdm>=4.67.3",
  "gmsh>=4.13.1",
  "numpy>=2.4.3",
  "pydantic>=2.12.5",
  "pyvista>=0.47.1",
  "toml>=0.10.2",
  "limols>=2.0.0",
  "scipy>=1.17.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
fem-pipeline = "ews_fem_pipeline.cli:cli_main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ['E', 'F', 'W', 'A', 'PL', 'I', 'NPY', 'PERF', 'FURB', 'SIM', 'C4', 'RUF', 'DTZ', 'B']
ignore = [
    'W191',  # formatter takes care of this
    'E111',  # formatter takes care of this
    'E114',  # formatter takes care of this
    'E117',  # formatter takes care of this
    'E501',  # formatter takes care of this
    'PLR0915',  # Too many statements; allow for long functions for now
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # ignore unused imports in __init__ files

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/ews_fem_pipeline/_version.py"

[tool.coverage.run]
source_pkgs = ["ews_fem_pipeline", "tests"]
branch = true
parallel = true
omit = [
  "src/ews_fem_pipeline/__about__.py",
]

[tool.coverage.paths]
ews_fem_pipeline = ["src/ews_fem_pipeline", "*/ews-fem-pipeline/src/ews_fem_pipeline"]
tests = ["tests", "*/ews-fem-pipeline/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.uv.sources]
limols = { git = "https://bitbucket.org/limebv/dfo.git" }
